--- a/sass/blocks/lib-block.scss
+++ b/sass/blocks/lib-block.scss
@@ -1,7 +1,7 @@
 .lib-block {
   position: relative;
   flex-grow: 1;
-  padding: 0 50px;
+  padding: 0 50px 15px 50px;
   margin-bottom: 20px;
   border: 4px inset #BFBFBF;
 }
@@ -25,4 +25,28 @@
 
 .lib-block__list {
   padding-left: 25px;
+}
+
+.lib-block__spoiler {
+  margin-bottom: 10px;
+  @include button(10px, 20px, #000000, #BFBFBF, 10px);
+  cursor: pointer;
+  outline: none;
+}
+
+.lib-block__example {
+  display: block;
+  margin-bottom: 10px;
+  padding: 20px;
+  border: 1px solid #BFBFBF;
+  background-color: #E7E7E7;
+  border-radius: 5px;
+
+  &--show {
+    display: block;
+  }
+
+  &--closed {
+    display: none;
+  }
 }
