--- a/sass/global/variables.scss
+++ b/sass/global/variables.scss
@@ -1,7 +1,5 @@
 // Шрифты
-$open: "opensans", "Arial", sans-serif;
-$open-b: "opensansbold", "Arial", sans-serif;
-$open-l: "opensanslight", "Arial", sans-serif;
+$ptsans: "ptsans", "Arial", sans-serif;
 
 // Для сетки
 $outline: 1px solid black;
