--- a/sass/global/fonts.scss
+++ b/sass/global/fonts.scss
@@ -1,26 +1,39 @@
 @font-face {
-  font-family: "opensans";
-  src: local("opensans"),
-      url("../fonts/opensans.woff2") format("woff2"),
-      url("../fonts/opensans.woff") format("woff");
+  font-family: "ptsans";
+  src: local("PT_Sans-Web-Regular"),
+      url("../fonts/pt_sans-web-regular-webfont.woff2") format("woff2"),
+      url("../fonts/PT_Sans-Web-Regular.ttf") format("truetype"),
+      url("../fonts/pt_sans-web-regular-webfont.woff") format("woff");
+      font-weight: 400;
       font-style: normal;
-      font-weight: normal;
 }
 
 @font-face {
-  font-family: "opensansbold";
-  src: local("opensansbold"),
-      url("../fonts/opensansbold.woff2") format("woff2"),
-      url("../fonts/opensansbold.woff") format("woff");
+  font-family: "ptsans";
+  src: local("PT_Sans-Web-Bold"),
+      url("../fonts/pt_sans-web-bold-webfont.woff2") format("woff2"),
+      url("../fonts/PT_Sans-Web-Bold.ttf") format("truetype"),
+      url("../fonts/pt_sans-web-bold-webfont.woff") format("woff");
+      font-weight: 700;
       font-style: normal;
-      font-weight: normal;
 }
 
 @font-face {
-  font-family: "opensanslight";
-  src: local("opensanslight"),
-      url("../fonts/opensanslight.woff2") format("woff2"),
-      url("../fonts/opensanslight.woff") format("woff");
-      font-style: normal;
-      font-weight: normal;
+  font-family: "ptsans";
+  src: local("PT_Sans-Web-BoldItalic"),
+      url("../fonts/pt_sans-web-bolditalic-webfont.woff2") format("woff2"),
+      url("../fonts/PT_Sans-Web-BoldItalic.ttf") format("truetype"),
+      url("../fonts/pt_sans-web-bolditalic-webfont.woff") format("woff");
+      font-weight: 700;
+      font-style: italic;
+}
+
+@font-face {
+  font-family: "ptsans";
+  src: local("PT_Sans-Web-Italic"),
+      url("../fonts/pt_sans-web-italic-webfont.woff2") format("woff2"),
+      url("../fonts/PT_Sans-Web-Italic.ttf") format("truetype"),
+      url("../fonts/pt_sans-web-italic-webfont.woff") format("woff");
+      font-weight: 400;
+      font-style: italic;
 }
