--- a/css/style.css
+++ b/css/style.css
@@ -552,6 +552,43 @@ code {
   .lib-block__example--closed {
     display: none; }
 
+.post {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: justify;
+      justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap; }
+
+.post__item {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+      flex-direction: column;
+  -ms-flex-positive: 1;
+      flex-grow: 1;
+  margin: 0 5px 20px 5px;
+  padding: 8px 25px 10px 25px;
+  width: 300px;
+  border: 1px solid #BFBFBF;
+  background-color: #ffffff; }
+
+.post__item-title {
+  font-weight: 700; }
+
+.post__item-user {
+  font-weight: 400;
+  font-style: italic; }
+
+.post__item-message {
+  min-height: 60px;
+  color: #283645; }
+
+.post__item-likes {
+  margin-top: auto;
+  padding-top: 10px;
+  color: #a5a5a5; }
+
 .page-footer {
   padding: 40px 0 20px 0; }
 
