--- a/sass/blocks/lib-block.scss
+++ b/sass/blocks/lib-block.scss
@@ -1,5 +1,4 @@
 .lib-block {
-  position: relative;
   flex-grow: 1;
   padding: 0 50px 15px 50px;
   margin-bottom: 20px;
@@ -8,19 +7,31 @@
 
 .lib-block__title {
   padding: 0;
-  padding-bottom: 10px;
+  padding-bottom: 20px;
+  margin-bottom: 0;
+}
+
+.lib-block__paragraph {
+  padding: 10px 0 20px 0;
+  margin: 0;
 }
 
 .lib-block__name {
-  position: absolute;
-  width: auto;
-  height: auto;
-  top: 12px;
-  left: -15px;
+  display: block;
+  max-width: 120px;
+  padding: 0;
+  margin: 0;
+  height: 0;
   font-size: 1.25rem;
   font-weight: bold;
   color: #7B7474;
-  transform: rotate(-90deg);
+  background-color: transparent;
+  transform: translate(-100px, -40px) rotate(-90deg);
+}
+
+.lib-block__description {
+  padding: 0;
+  margin-top: 0;
 }
 
 .lib-block__list {
