--- a/sass/global/style.scss
+++ b/sass/global/style.scss
@@ -7,6 +7,7 @@
 @import "sass/blocks/page-content.scss";
 @import "sass/blocks/lib-block.scss";
 @import "sass/blocks/post.scss";
+@import "sass/blocks/burger.scss";
 @import "sass/blocks/page-footer.scss";
 @import "sass/blocks/author.scss";
 @import "sass/global/print.scss";
