--- a/sass/global/variables.scss
+++ b/sass/global/variables.scss
@@ -5,13 +5,10 @@ $ptsans: "ptsans", "Arial", sans-serif;
 $outline: 1px solid black;
 
 // Цвета фона
-$bg-header: #1d2631;
-$bg-nav: #283645;
 $bg-gray: #f2f2f2;
 $bg-white: #ffffff;
+$bg-black: #000000;
 $bg-pink: #d22856;
-$bg-btn: #2aab6d;
-$table-b: #e5e5e5;
 
 // Цвета текста
 $text-white: #ffffff;
