--- a/sass/global/style.scss
+++ b/sass/global/style.scss
@@ -8,6 +8,10 @@
 @import "sass/blocks/lib-block.scss";
 @import "sass/blocks/post.scss";
 @import "sass/blocks/burger.scss";
+@import "sass/blocks/cross.scss";
+@import "sass/blocks/square.scss";
+@import "sass/blocks/circle.scss";
+@import "sass/blocks/loader.scss";
 @import "sass/blocks/page-footer.scss";
 @import "sass/blocks/author.scss";
 @import "sass/global/print.scss";
