--- a/css/style.css
+++ b/css/style.css
@@ -599,11 +599,98 @@ code {
   color: #a5a5a5; }
 
 .burger {
+  position: relative;
+  display: block;
+  font-size: 0;
   width: 50px;
-  height: 4px;
-  margin-bottom: 20px;
-  background-color: #000000;
-  box-shadow: 0 10px 0 0 #000000, 0 20px 0 0 #000000; }
+  height: 24px;
+  background-color: transparent;
+  cursor: pointer;
+  border: none; }
+  .burger::before {
+    position: absolute;
+    content: "";
+    top: 0px;
+    left: 0px;
+    width: 50px;
+    height: 4px;
+    margin-bottom: 15px;
+    background-color: #000000;
+    box-shadow: 0 10px 0 0 #000000, 0 20px 0 0 #000000; }
+  .burger:focus {
+    outline: none; }
+  .burger:hover::before {
+    background-color: #d22856;
+    box-shadow: 0 10px 0 0 #d22856, 0 20px 0 0 #d22856; }
+
+.cross {
+  position: relative;
+  display: block;
+  font-size: 0;
+  background-color: transparent;
+  cursor: pointer;
+  border: none; }
+  .cross:focus {
+    outline: none; }
+  .cross::before, .cross::after {
+    content: "";
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 30px;
+    height: 5px;
+    background-color: #000000; }
+  .cross::before {
+    transform: rotate(45deg);
+    box-shadow: none; }
+  .cross::after {
+    transform: rotate(-45deg); }
+  .cross:hover::before, .cross:hover::after {
+    background-color: #d22856; }
+
+.square {
+  display: block;
+  width: 36px;
+  height: 36px;
+  background-color: #ffffff;
+  border: 2px solid #000000;
+  cursor: pointer; }
+  .square:hover {
+    border: 2px solid #f2f2f2; }
+  .square:active {
+    border: 2px solid #d22856; }
+
+.circle {
+  display: block;
+  width: 36px;
+  height: 36px;
+  background-color: #ffffff;
+  border-radius: 50%;
+  border: 2px solid #000000;
+  cursor: pointer; }
+  .circle:hover {
+    border: 2px solid #f2f2f2; }
+  .circle:active {
+    border: 2px solid #d22856; }
+
+.loader {
+  display: inline-block; }
+  .loader::before {
+    content: "";
+    display: block;
+    width: 20px;
+    height: 20px;
+    border: 3px solid #C0C0C0;
+    border-top: 3px solid #A0A0A0;
+    border-right: 3px solid #A9A9A9;
+    border-radius: 50%;
+    animation: loader-rotate 1s linear infinite; }
+
+@keyframes loader-rotate {
+  0% {
+    transform: rotate(0); }
+  100% {
+    transform: rotate(360deg); } }
 
 .page-footer {
   padding: 40px 0 20px 0; }
