--- a/sass/blocks/burger.scss
+++ b/sass/blocks/burger.scss
@@ -1,8 +1,35 @@
 .burger {
+  position: relative;
+  display: block;
+  font-size: 0;
   width: 50px;
-  height: 4px;
-  margin-bottom: 20px;
-  background-color: $bg-black;
-  box-shadow: 0 10px 0 0 $bg-black,
-              0 20px 0 0 $bg-black;
+  height: 24px;
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+
+  &::before {
+    position: absolute;
+    content: "";
+    top: 0px;
+    left: 0px;
+    width: 50px;
+    height: 4px;
+    margin-bottom: 15px;
+    background-color: $bg-black;
+    box-shadow: 0 10px 0 0 $bg-black,
+                0 20px 0 0 $bg-black;
+  }
+
+  &:focus {
+    outline: none;
+  }
+
+  &:hover {
+    &::before {
+      background-color: $bg-pink;
+      box-shadow: 0 10px 0 0 $bg-pink,
+                  0 20px 0 0 $bg-pink;
+    }
+  }
 }
