--- a/sass/global/style.scss
+++ b/sass/global/style.scss
@@ -12,6 +12,8 @@
 @import "sass/blocks/square.scss";
 @import "sass/blocks/circle.scss";
 @import "sass/blocks/loader.scss";
+@import "sass/blocks/int-nav.scss";
+@import "sass/blocks/drop-down-nav.scss";
 @import "sass/blocks/page-footer.scss";
 @import "sass/blocks/author.scss";
 @import "sass/global/print.scss";
