--- a/sass/global/variables.scss
+++ b/sass/global/variables.scss
@@ -9,6 +9,7 @@ $bg-gray: #f2f2f2;
 $bg-white: #ffffff;
 $bg-black: #000000;
 $bg-pink: #d22856;
+$bg-nav: #283645;
 
 // Цвета текста
 $text-white: #ffffff;
