--- a/sass/blocks/drop-down-nav.scss
+++ b/sass/blocks/drop-down-nav.scss
@@ -103,7 +103,7 @@
   display: none;
 }
 
-.drop-down-nav__subitems--opened {
+.drop-down-nav__subitems--opened, .drop-down-nav__subitems--nojs {
   display: flex;
 }
 
