--- a/sass/global/style.scss
+++ b/sass/global/style.scss
@@ -14,6 +14,8 @@
 @import "sass/blocks/loader.scss";
 @import "sass/blocks/int-nav.scss";
 @import "sass/blocks/drop-down-nav.scss";
+@import "sass/blocks/breadcrumbs.scss";
+@import "sass/blocks/pagination.scss";
 @import "sass/blocks/page-footer.scss";
 @import "sass/blocks/author.scss";
 @import "sass/global/print.scss";
