--- a/sass/global/variables.scss
+++ b/sass/global/variables.scss
@@ -15,6 +15,7 @@ $bg-nav: #283645;
 $text-white: #ffffff;
 $text-black: #202020;
 $text-gray: #283645;
+$text-lgray: #7f7e7e;
 $text-pink: #d22856;
 
 // Адаптивность
