--- a/css/style.css
+++ b/css/style.css
@@ -508,7 +508,7 @@ code {
 .lib-block {
   -ms-flex-positive: 1;
       flex-grow: 1;
-  padding: 0 50px 15px 58px;
+  padding: 0 50px 15px 60px;
   margin-bottom: 20px;
   border: 4px inset #BFBFBF; }
 
@@ -531,7 +531,7 @@ code {
   font-weight: bold;
   color: #7B7474;
   background-color: transparent;
-  transform: translate(-114px, -20px) rotate(-90deg); }
+  transform: translate(-118px, -20px) rotate(-90deg); }
 
 .lib-block__description {
   padding: 0;
@@ -1051,12 +1051,181 @@ code {
   .pagination__item--disable:hover, .pagination__item--disable:focus {
     background-color: #E7E7E7; }
 
+.mini-image {
+  position: relative;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: center;
+      justify-content: center;
+  -ms-flex-align: center;
+      align-items: center; }
+
+.mini-image__dragon {
+  border: 3px solid #ffffff;
+  box-shadow: 2px 2px 20px 3px rgba(0, 0, 0, 0.75);
+  cursor: pointer; }
+
+.mini-image__dragon-big {
+  position: fixed;
+  content: "";
+  top: 5%;
+  left: center;
+  width: 1200px;
+  height: 800px;
+  z-index: 20; }
+
+.mini-image__dragon-big--opened {
+  display: block; }
+
+.mini-image__dragon-big--closed {
+  display: none; }
+
+.mini-image__cross {
+  position: relative;
+  display: block;
+  font-size: 0;
+  background-color: transparent;
+  cursor: pointer;
+  border: none; }
+  .mini-image__cross:focus {
+    outline: none; }
+  .mini-image__cross::before, .mini-image__cross::after {
+    content: "";
+    position: fixed;
+    top: 50px;
+    right: 50px;
+    width: 30px;
+    height: 5px;
+    z-index: 20;
+    background-color: #ffffff; }
+  .mini-image__cross::before {
+    transform: rotate(45deg);
+    box-shadow: none; }
+  .mini-image__cross::after {
+    transform: rotate(-45deg); }
+  .mini-image__cross:hover::before, .mini-image__cross:hover::after {
+    background-color: #d22856; }
+
+.mini-image__cross--opened {
+  display: block; }
+
+.mini-image__cross--closed {
+  display: none; }
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.95); }
+
+.overlay--opened {
+  display: block; }
+
+.overlay--closed {
+  display: none; }
+
+.retina {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: center;
+      justify-content: center;
+  -ms-flex-align: center;
+      align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap; }
+
+.retina__background {
+  width: 300px;
+  height: 200px;
+  margin-top: 20px;
+  background-color: #E7E7E7;
+  background-image: url("../img/dragon-mobile@1x.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% auto; }
+
+.social {
+  display: -ms-flexbox;
+  display: flex; }
+
+.social__btn {
+  display: block;
+  width: 47px;
+  height: 47px;
+  margin-right: 12.5px;
+  border: 2px solid rgba(40, 54, 69, 0.45);
+  border-radius: 50%;
+  font-size: 0;
+  background-color: rgba(0, 0, 0, 0.1); }
+  .social__btn--tw {
+    background-image: url("../img/icon-twitter.svg");
+    background-repeat: no-repeat;
+    background-position: center center;
+    -webkit-print-color-adjust: exact;
+    print-color-adjust: exact; }
+    .social__btn--tw:active {
+      background-color: transparent;
+      background-image: url("../img/icon-twitter-a.svg"); }
+  .social__btn--fb {
+    background-image: url("../img/icon-facebook.svg");
+    background-repeat: no-repeat;
+    background-position: center center;
+    -webkit-print-color-adjust: exact;
+    print-color-adjust: exact; }
+    .social__btn--fb:active {
+      background-color: transparent;
+      background-image: url("../img/icon-facebook-a.svg"); }
+  .social__btn--youtube {
+    background-image: url("../img/icon-youtube.svg");
+    background-repeat: no-repeat;
+    background-position: 16px center;
+    -webkit-print-color-adjust: exact;
+    print-color-adjust: exact; }
+    .social__btn--youtube:active {
+      background-color: transparent;
+      background-image: url("../img/icon-youtube-a.svg"); }
+  .social__btn:hover {
+    border: 2px solid #283645; }
+  .social__btn:active {
+    border: 2px solid rgba(40, 54, 69, 0.1); }
+
 .page-footer {
   padding: 40px 0 20px 0; }
 
 .author {
   font-size: 0.9rem;
   text-align: right; }
+
+@media (-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+  .retina__background {
+    background-image: url("../img/dragon-mobile@2x.jpg");
+    background-size: 100% auto; } }
+
+@media print, (min-width: 660px) {
+  .retina__background {
+    width: 600px;
+    height: 400px;
+    background-image: url("../img/dragon-tablet@1x.jpg");
+    background-size: 100% auto; } }
+
+@media print and (-webkit-min-device-pixel-ratio: 1.5), print and (min-resolution: 144dpi), (min-width: 660px) and (-webkit-min-device-pixel-ratio: 1.5), (min-width: 660px) and (min-resolution: 144dpi), print and (min-resolution: 1.5dppx), (min-width: 660px) and (min-resolution: 1.5dppx) {
+  .retina__background {
+    background-image: url("../img/dragon-tablet@2x.jpg");
+    background-size: 100% auto; } }
+
+@media print, (min-width: 960px) {
+  .retina__background {
+    width: 1200px;
+    height: 800px;
+    background-image: url("../img/dragon-desktop@1x.jpg");
+    background-size: 100% auto; } }
+
+@media print and (-webkit-min-device-pixel-ratio: 1.5), print and (min-resolution: 144dpi), (min-width: 960px) and (-webkit-min-device-pixel-ratio: 1.5), (min-width: 960px) and (min-resolution: 144dpi), print and (min-resolution: 1.5dppx), (min-width: 960px) and (min-resolution: 1.5dppx) {
+  .retina__background {
+    background-image: url("../img/dragon-desktop@2x.jpg");
+    background-size: 100% auto; } }
 
 @media print {
   *,
