--- a/sass/global/style.scss
+++ b/sass/global/style.scss
@@ -16,6 +16,10 @@
 @import "sass/blocks/drop-down-nav.scss";
 @import "sass/blocks/breadcrumbs.scss";
 @import "sass/blocks/pagination.scss";
+@import "sass/blocks/mini-image.scss";
+@import "sass/blocks/overlay.scss";
+@import "sass/blocks/retina.scss";
+@import "sass/blocks/social.scss";
 @import "sass/blocks/page-footer.scss";
 @import "sass/blocks/author.scss";
 @import "sass/global/print.scss";
