--- a/css/style.css
+++ b/css/style.css
@@ -598,6 +598,64 @@ code {
   padding-top: 10px;
   color: #a5a5a5; }
 
+.tabs__btn {
+  display: none; }
+
+.tabs__toggle {
+  display: inline-block;
+  margin-bottom: -1px;
+  margin-right: -1px;
+  padding: 5px 10px 2px 10px;
+  border: 1px solid gray;
+  color: gray;
+  background-color: #E7E7E7;
+  cursor: pointer; }
+
+.tabs__post {
+  display: none;
+  padding: 20px 10px;
+  border: 1px solid gray;
+  background-color: #ffffff; }
+
+.tabs__post-message {
+  margin: 0; }
+
+.tabs__post-author {
+  display: block;
+  padding-top: 8px;
+  font-size: 14px;
+  font-weight: 400;
+  font-style: italic;
+  text-align: right; }
+
+#tabs-btn-1:checked ~ .tabs__post-1 {
+  display: block; }
+
+#tabs-btn-2:checked ~ .tabs__post-2 {
+  display: block; }
+
+#tabs-btn-3:checked ~ .tabs__post-3 {
+  display: block; }
+
+#tabs-btn-4:checked ~ .tabs__post-4 {
+  display: block; }
+
+#tabs-btn-1:checked ~ .tabs__toggle-1 {
+  color: #202020;
+  background-color: #ffffff; }
+
+#tabs-btn-2:checked ~ .tabs__toggle-2 {
+  color: #202020;
+  background-color: #ffffff; }
+
+#tabs-btn-3:checked ~ .tabs__toggle-3 {
+  color: #202020;
+  background-color: #ffffff; }
+
+#tabs-btn-4:checked ~ .tabs__toggle-4 {
+  color: #202020;
+  background-color: #ffffff; }
+
 .burger {
   position: relative;
   display: block;
@@ -1034,14 +1092,14 @@ code {
 
 .pagination__item {
   display: block;
+  margin-bottom: -1px;
+  margin-right: -1px;
   padding: 10px;
   min-width: 50px;
   border: 1px solid #7f7e7e;
   text-decoration: none;
   text-align: center;
   color: #202020; }
-  .pagination__item + .pagination__item {
-    border-left: 0; }
   .pagination__item:hover, .pagination__item:focus {
     text-decoration: none;
     color: #202020;
