--- a/sass/global/variables.scss
+++ b/sass/global/variables.scss
@@ -10,6 +10,7 @@ $bg-white: #ffffff;
 $bg-black: #000000;
 $bg-pink: #d22856;
 $bg-nav: #283645;
+$bg-exgray: #e7e7e7;
 
 // Цвета текста
 $text-white: #ffffff;
