--- a/sass/global/style.scss
+++ b/sass/global/style.scss
@@ -21,6 +21,7 @@
 @import "sass/blocks/overlay.scss";
 @import "sass/blocks/retina.scss";
 @import "sass/blocks/social.scss";
+@import "sass/blocks/table-scroll.scss";
 @import "sass/blocks/page-footer.scss";
 @import "sass/blocks/author.scss";
 @import "sass/global/print.scss";
