--- a/sass/global/style.scss
+++ b/sass/global/style.scss
@@ -22,6 +22,7 @@
 @import "sass/blocks/retina.scss";
 @import "sass/blocks/social.scss";
 @import "sass/blocks/table-scroll.scss";
+@import "sass/blocks/table-transform.scss";
 @import "sass/blocks/page-footer.scss";
 @import "sass/blocks/author.scss";
 @import "sass/global/print.scss";
