--- a/css/style.css
+++ b/css/style.css
@@ -1274,6 +1274,113 @@ th, td {
 .table-scroll__body tr:nth-of-type(even) {
   background-color: pink; }
 
+.table-transform {
+  max-width: 320px;
+  margin: 0 auto;
+  padding-right: 20px;
+  padding-left: 20px;
+  overflow: hidden; }
+
+.table-transform__btn {
+  display: none; }
+
+.table-transform__table {
+  width: 834px;
+  margin: 0 -40px;
+  border-collapse: collapse;
+  transform: translateX(-238px); }
+
+.table-transform__options {
+  display: none; }
+
+.table-transform__package {
+  width: 138px;
+  padding: 17px 68px 20px 68px;
+  text-align: center;
+  background-color: #283645;
+  border-right: 2px solid #f2f2f2;
+  border-left: 2px solid #f2f2f2;
+  -webkit-print-color-adjust: exact;
+  print-color-adjust: exact; }
+
+.table-transform__package-title {
+  font-weight: 700;
+  font-style: normal;
+  font-size: 18px;
+  line-height: 30px;
+  color: #ffffff;
+  text-transform: uppercase; }
+
+.table-transform__package-price {
+  margin: 0;
+  margin-top: 2px;
+  font-weight: 400;
+  font-style: italic;
+  font-size: 24px;
+  line-height: 30px;
+  color: #ffffff; }
+
+.table-transform__condition {
+  padding: 15px 16px 14px 21px;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 14px;
+  line-height: 30px;
+  color: #283645;
+  text-transform: uppercase;
+  background-color: #ffffff;
+  border: 2px solid #f2f2f2; }
+  .table-transform__condition span {
+    display: block;
+    width: 140px; }
+
+.table-transform__icon {
+  padding: 11px 1px 14px 22px;
+  background-color: #ffffff;
+  border: 2px solid #f2f2f2; }
+
+.table-transform__logo {
+  display: block;
+  padding-top: 3px; }
+
+#table-transform__btn-1:checked ~ .table-transform__table {
+  transform: translateX(39px); }
+
+#table-transform__btn-2:checked ~ .table-transform__table {
+  transform: translateX(-243px); }
+
+#table-transform__btn-3:checked ~ .table-transform__table {
+  transform: translateX(-525px); }
+
+.table-transform__slider-controls {
+  position: relative;
+  text-align: center;
+  margin-top: 43px; }
+
+.table-transform__slider-control {
+  display: inline-block;
+  width: 6px;
+  height: 6px;
+  margin-right: 15px;
+  vertical-align: top;
+  background-color: #bec2c7;
+  border-radius: 50%;
+  cursor: pointer; }
+  .table-transform__slider-control:last-child {
+    margin-right: 0; }
+
+#table-transform__btn-1:checked ~ .table-transform__slider-controls .table-transform__slider-control:first-child {
+  background-color: #ffffff;
+  box-shadow: 0 0 0 3px #283645; }
+
+#table-transform__btn-2:checked ~ .table-transform__slider-controls .table-transform__slider-control:nth-child(2) {
+  background-color: #ffffff;
+  box-shadow: 0 0 0 3px #283645; }
+
+#table-transform__btn-3:checked ~ .table-transform__slider-controls .table-transform__slider-control:nth-child(3) {
+  background-color: #ffffff;
+  box-shadow: 0 0 0 3px #283645; }
+
 .page-footer {
   padding: 40px 0 20px 0; }
 
@@ -1309,6 +1416,77 @@ th, td {
   .retina__background {
     background-image: url("../img/dragon-desktop@2x.jpg");
     background-size: 100% auto; } }
+
+@media print, (min-width: 830px) {
+  .table-transform {
+    max-width: 660px; }
+  .table-transform__slider-controls {
+    display: none; }
+  .table-transform__table {
+    width: 620px;
+    margin: 0;
+    margin-left: -20px;
+    border-collapse: collapse;
+    transform: none;
+    overflow: visible; }
+  .table-transform__options {
+    display: table-cell;
+    width: 155px;
+    padding: 6px 0 8px 16px;
+    border: 2px solid #f2f2f2;
+    background-color: #ffffff;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 14px;
+    line-height: 30px;
+    color: #283645; }
+  .table-transform__options--hidden {
+    font-size: 0;
+    background-color: #e7e7e7;
+    border: none; }
+  #table-transform__btn-1:checked ~ .table-transform__table {
+    transform: none; }
+  #table-transform__btn-2:checked ~ .table-transform__table {
+    transform: none; }
+  #table-transform__btn-3:checked ~ .table-transform__table {
+    transform: none; }
+  .table-transform__package {
+    width: 155px;
+    padding: 10px 0 9px 0;
+    border-left: none;
+    border-right: 2px solid #f2f2f2; }
+  .table-transform__package:last-child {
+    border-right: 2px solid #283645; }
+  .table-transform__package-price {
+    padding: 0;
+    margin-top: 0;
+    font-weight: 400;
+    font-style: italic;
+    font-size: 18px;
+    line-height: 30px;
+    color: #ffffff; }
+  .table-transform__package-title {
+    font-weight: 700;
+    font-style: normal;
+    font-size: 16px;
+    line-height: 30px;
+    color: #ffffff; }
+  .table-transform__condition {
+    width: 0;
+    font-size: 0;
+    line-height: 0;
+    padding: 0;
+    border: none; }
+  .table-transform__condition span {
+    display: none; }
+  .table-transform__icon {
+    width: 155px;
+    padding: 0;
+    border-left: none;
+    border-right: 2px solid #f2f2f2;
+    border-bottom: 2px solid #f2f2f2; }
+  .table-transform__logo {
+    margin-left: 62px; } }
 
 @media print {
   *,
